--- a/public/reservationform.html
+++ b/public/reservationform.html
@@ -22,7 +22,7 @@
                         <a class="nav-link" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Add new reservation</a>
+                        <a class="nav-link active" aria-current="page" href="#">Make new reservation</a>
                     </li>
                 </ul>
             </div>
