removed body-parser and improved validation

--- a/public/reservationform.html
+++ b/public/reservationform.html
@@ -41,7 +41,7 @@
             </div>
             <div class="mb-3">
                 <label for="resRoom" class="form-label">Room</label>
-                <input type="number" class="form-control" id="resRoom" name="room" required>
+                <input type="number" class="form-control" id="resRoom" name="room" min="1" required>
             </div>
             <div class="mb-3">
                 <label class="form-check-label" for="resFirstname">First Name</label>
